[gd_scene load_steps=7 format=3 uid="uid://cvydftk1bna3i"]

[ext_resource type="Script" path="res://scripts/linear_system.gd" id="1_noe2a"]
[ext_resource type="PackedScene" uid="uid://lj4ns46eff7g" path="res://scenes/row_slot.tscn" id="2_ufvyo"]
[ext_resource type="PackedScene" uid="uid://ddjews4qv80rc" path="res://scenes/row.tscn" id="3_j3dfa"]
[ext_resource type="FontFile" uid="uid://2odoyvlagkaj" path="res://assets/cmunrm.ttf" id="4_d7sgq"]
[ext_resource type="PackedScene" uid="uid://2t1n3fcynrbl" path="res://scenes/solution.tscn" id="4_lwfyc"]

[sub_resource type="FontVariation" id="FontVariation_b1t08"]
base_font = ExtResource("4_d7sgq")
variation_embolden = -0.2
variation_transform = Transform2D(1, 0, 0, 2, 0, 0)

[node name="LinearSystem" type="Node2D"]
script = ExtResource("1_noe2a")

[node name="Slots" type="Node2D" parent="."]

[node name="Rows" type="Node2D" parent="."]

[node name="1" parent="Rows" instance=ExtResource("2_ufvyo")]
position = Vector2(192, 32)

[node name="1" parent="Rows/1" instance=ExtResource("3_j3dfa")]
values = Array[int]([1, 2, 3, 4])
const_term = 1.0

[node name="2" parent="Rows" instance=ExtResource("2_ufvyo")]
position = Vector2(192, 104)

[node name="2" parent="Rows/2" instance=ExtResource("3_j3dfa")]
values = Array[int]([0, 1, 1, 1])
const_term = 1.0

[node name="3" parent="Rows" instance=ExtResource("2_ufvyo")]
position = Vector2(192, 176)

[node name="3" parent="Rows/3" instance=ExtResource("3_j3dfa")]
values = Array[int]([0, 0, 5, 2])
const_term = 2.0

[node name="4" parent="Rows" instance=ExtResource("2_ufvyo")]
position = Vector2(192, 248)

[node name="4" parent="Rows/4" instance=ExtResource("3_j3dfa")]
values = Array[int]([0, 0, 0, 4])
const_term = -1.0

[node name="Dragging" type="Node2D" parent="."]

[node name="LeftParen" type="Label" parent="."]
offset_left = -64.0
offset_top = 40.0
offset_right = 8.0
offset_bottom = 296.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_b1t08")
theme_override_font_sizes/font_size = 140
text = "("
horizontal_alignment = 2
vertical_alignment = 1

[node name="RightParen" type="Label" parent="."]
offset_left = 376.0
offset_top = 40.0
offset_right = 448.0
offset_bottom = 296.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_b1t08")
theme_override_font_sizes/font_size = 140
text = ")"
vertical_alignment = 1

[node name="Separator" type="ColorRect" parent="."]
offset_left = 270.0
offset_right = 274.0
offset_bottom = 280.0
color = Color(0, 0, 0, 1)

[node name="Solutions" type="HBoxContainer" parent="."]
offset_left = -64.0
offset_top = 320.0
offset_right = 448.0
offset_bottom = 384.0

[node name="Solution1" parent="Solutions" instance=ExtResource("4_lwfyc")]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
solution_index = 1

[node name="Solution2" parent="Solutions" instance=ExtResource("4_lwfyc")]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
solution_index = 2

[node name="Solution3" parent="Solutions" instance=ExtResource("4_lwfyc")]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
solution_index = 3

[node name="Solution4" parent="Solutions" instance=ExtResource("4_lwfyc")]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
solution_index = 4

[node name="Win" type="Label" parent="."]
visible = false
offset_left = -64.0
offset_top = 448.0
offset_right = 448.0
offset_bottom = 576.0
theme_override_colors/font_color = Color(0, 0.588235, 0.313726, 1)
theme_override_font_sizes/font_size = 64
text = "System Solved!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="clicked" from="Rows/1/1" to="." method="on_clicked"]
[connection signal="decided" from="Rows/1/1" to="." method="on_decided"]
[connection signal="dragged" from="Rows/1/1" to="." method="on_dragged"]
[connection signal="dropped" from="Rows/1/1" to="." method="row_dropped"]
[connection signal="found_solution" from="Rows/1/1" to="." method="_on__found_solution"]
[connection signal="picked_up" from="Rows/1/1" to="." method="row_picked_up"]
[connection signal="clicked" from="Rows/2/2" to="." method="on_clicked"]
[connection signal="decided" from="Rows/2/2" to="." method="on_decided"]
[connection signal="dragged" from="Rows/2/2" to="." method="on_dragged"]
[connection signal="dropped" from="Rows/2/2" to="." method="row_dropped"]
[connection signal="found_solution" from="Rows/2/2" to="." method="_on__found_solution"]
[connection signal="picked_up" from="Rows/2/2" to="." method="row_picked_up"]
[connection signal="clicked" from="Rows/3/3" to="." method="on_clicked"]
[connection signal="decided" from="Rows/3/3" to="." method="on_decided"]
[connection signal="dragged" from="Rows/3/3" to="." method="on_dragged"]
[connection signal="dropped" from="Rows/3/3" to="." method="row_dropped"]
[connection signal="found_solution" from="Rows/3/3" to="." method="_on__found_solution"]
[connection signal="picked_up" from="Rows/3/3" to="." method="row_picked_up"]
[connection signal="clicked" from="Rows/4/4" to="." method="on_clicked"]
[connection signal="decided" from="Rows/4/4" to="." method="on_decided"]
[connection signal="dragged" from="Rows/4/4" to="." method="on_dragged"]
[connection signal="dropped" from="Rows/4/4" to="." method="row_dropped"]
[connection signal="found_solution" from="Rows/4/4" to="." method="_on__found_solution"]
[connection signal="picked_up" from="Rows/4/4" to="." method="row_picked_up"]
